--- a/10.89.12.4/etc/caddy/Caddyfile
+++ b/10.89.12.4/etc/caddy/Caddyfile
@@ -46,52 +46,68 @@ bardi.ch:8384 {
 :443 {
 	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 
-	# DiskStation main HTTPS
+	# DiskStation main HTTPS site (WAN)
 	@bardi host bardi.ch
 	reverse_proxy @bardi 10.89.12.2:443 {
 		header_up bardi.ch
 	}
 
-	# DSM management
+	# DSM management (internal only)
 	@syno5001 host bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @syno5001 10.89.12.2:5001 {
 		header_up bardi.ch
 	}
 
-	# Synology service
+	# Synology service (internal only)
 	@syno5006 host bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @syno5006 10.89.12.2:5006 {
 		header_up bardi.ch
 	}
 
-	# Synology Drive
+	# Synology Drive (internal only)
 	@syno6690 host bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @syno6690 10.89.12.2:6690 {
 		header_up bardi.ch
 	}
 
-	# Router
+	# Router (internal only)
 	@router host router.bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @router 10.89.12.1:8080
 
-	# DNS over HTTPS
+	# DNS over HTTPS (internal only)
 	@dns host dns.bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @dns 127.0.0.1:8053
 
 	# Headscale control plane (internal only)
 	@vpn host vpn.bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @vpn 127.0.0.1:8910
 
 	# DERP relay (external)
 	@derp host derp.vpn.bardi.ch
 	reverse_proxy @derp 127.0.0.1:8912
 
-	# QNAP
+	# QNAP (internal only)
 	@qnap host qnap.bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @qnap 10.89.12.3:8080
 
-	# NAS internal service
+	# NAS internal service (internal only)
 	@nas host nas.bardi.ch
+	@lan4 remote_ip 10.89.12.0/24
+	@lan6 remote_ip 2a01:8b81:4800:9c00::/64
 	reverse_proxy @nas 127.0.0.1:9999
 
 	# Unknown host fallback
