--- a/10.89.12.4/etc/headscale/config.yaml
+++ b/10.89.12.4/etc/headscale/config.yaml
@@ -1,5 +1,6 @@
 ---
 # /etc/headscale/config.yaml
+# sudo cp /home/julien/10.89.12.4/etc/headscale/config.yaml /etc/headscale/config.yaml;sudo chown headscale:headscale /etc/headscale/config.yaml;sudo chmod 640 /etc/headscale/config.yaml
 # Public URL clients will use
 server_url: https://vpn.bardi.ch
 
