ipv4_prefixes/ipv6_prefixes

--- a/10.89.12.4/etc/headscale/config.yaml
+++ b/10.89.12.4/etc/headscale/config.yaml
@@ -26,9 +26,11 @@ noise:
 namespaces:
   - name: default
 
-# ✅ Correct schema for v0.27.1, Optional: add an IPv6 ULA if you want IPv6 addresses assigned
-ip_prefixes:
+# Optional: add an IPv6 ULA if you want IPv6 addresses assigned
+ipv4_prefixes:
   - 100.64.0.0/10
+
+ipv6_prefixes:
   - fd7a:115c:a1e0::/48
 
 derp:
