feat(stack): add full Gen0→Gen2 stack, configs, and supporting scripts; archive legacy files
- Added Gen0 foundational scripts:
  * setup_headscale.sh, setup_coredns.sh, dns_setup.sh
  * wg_firewall_apply.sh, router_audit.sh

- Added Gen1 helper scripts:
  * caddy-reload.sh, tailnet.sh
  * rotate-unbound-rootkeys.sh, wg_baseline.sh

- Added Gen2 site artifact:
  * site/index.html baseline landing page

- Added supporting utilities:
  * setup-subnet-router.sh with conflict detection, NAT, dnsmasq restart, GRO tuning, version auto-increment, footer logging
  * aliases.sh with router-logs and router-deploy
  * subnet-router.service systemd unit

- Added config templates:
  * headscale.yaml, coredns/Corefile, unbound/unbound.conf.template

- Added repo hygiene files:
  * Makefile with explicit .PHONY targets, lint, clean
  * README.md with usage, resilience notes, collaborator policy
  * Extended .gitignore with homelab-specific rules

- Moved existing files into Archive/ subfolder for preservation

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,24 @@ __pycache__/
 *.ap_
 *.dex
 *.obb
+
+# === Homelab-specific artifacts ===
+# Sensitive or generated files from WireGuard, Headscale, Unbound, and router scripts
+# Source: internal homelab stack documentation
+/etc/wireguard/*.key
+/etc/wireguard/*.conf
+/etc/wireguard/qr/*.qr
+
+/etc/headscale/db.sqlite
+/etc/headscale/private.key
+
+/var/lib/unbound/root.key
+/var/lib/subnet-router.version
+
+# Systemd runtime overrides (not source templates)
+/*.service.d/
+/*.pid
+
+# Future site/dashboard build artifacts
+gen2/site/node_modules/
+gen2/site/dist/
