--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -7,11 +7,15 @@
 server_url: http://10.89.12.4:8080
 listen_addr: 0.0.0.0:8080
 private_key_path: /etc/headscale/private.key
+noise:
+  private_key_path: /etc/headscale/noise_private.key
 db_type: sqlite
 db_path: /etc/headscale/db.sqlite
 
 dns:
+  override_local_dns: true
   base_domain: tailnet
   nameservers:
     - 10.89.12.4   # CoreDNS on NAS
+    - 1.1.1.1      # Cloudflare DNS as fallback
 
