fix(headscale): add noise key path and global DNS block
- Updated headscale.yaml to include noise.private_key_path for Tailscale v2 protocol
- Corrected dns.nameservers structure to use global block when override_local_dns is true
- Ensures Headscale service starts cleanly under v0.27+ with Noise protocol and DNS override enabled

--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -16,6 +16,7 @@ dns:
   override_local_dns: true
   base_domain: tailnet
   nameservers:
-    - 10.89.12.4   # CoreDNS on NAS
-    - 1.1.1.1      # Cloudflare DNS as fallback
+    global:
+      - 10.89.12.4   # CoreDNS on NAS
+      - 1.1.1.1      # Cloudflare DNS as fallback
 
