fix(headscale): add required prefixes to config
- Added 10.4.0.0/24 for VPN clients
- Added 10.89.12.0/24 for LAN subnet advertisement
- Resolves 'no IPv4 or IPv6 prefix configured' error during configtest
- Ensures Headscale v0.27+ passes lint and starts cleanly

--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -12,6 +12,10 @@ noise:
 db_type: sqlite
 db_path: /etc/headscale/db.sqlite
 
+prefixes:
+  - 10.4.0.0/24      # VPN client subnet
+  - 10.89.12.0/24    # LAN subnet advertised
+
 dns:
   override_local_dns: true
   base_domain: tailnet
