--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -12,7 +12,7 @@ noise:
 db_type: sqlite
 db_path: /etc/headscale/db.sqlite
 
-prefixes:
+ip_pools:
   - 10.4.0.0/24      # VPN client subnet
   - 10.89.12.0/24    # LAN subnet advertised
 
