--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -12,9 +12,10 @@ noise:
 db_type: sqlite
 db_path: /etc/headscale/db.sqlite
 
-ip_prefixes:
-  - 10.4.0.0/24      # VPN client subnet
-  - 10.89.12.0/24    # LAN subnet advertised
+prefixes:
+  v4: 10.4.0.0/24       # VPN client subnet
+  v6: fd7a:115c:a1e0::/48  # Example IPv6 pool (required even if unused)
+  allocation: sequential   # or "random"
 
 dns:
   override_local_dns: true
