fix(headscale): correct database type key
- Changed database.type from 'sqlite' to 'sqlite3'
- Ensures sqlite backend initializes correctly with path=/etc/headscale/db.sqlite
- Resolves 'path cannot be empty' error during configtest

--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -12,7 +12,7 @@ noise:
   private_key_path: /etc/headscale/noise_private.key
 
 database:
-  type: sqlite
+  type: sqlite3
   path: /etc/headscale/db.sqlite
 
 prefixes:
