fix(headscale): correct sqlite3 path key
- Changed database.sqlite_path to database.path when type=sqlite3
- Ensures sqlite backend initializes correctly
- Resolves 'path cannot be empty' error during configtest

--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -13,7 +13,7 @@ noise:
 
 database:
   type: sqlite3
-  sqlite_path: /etc/headscale/db.sqlite
+  path: /etc/headscale/db.sqlite
 
 prefixes:
   v4: 100.100.0.0/24       # VPN client subnet
