--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -13,7 +13,8 @@ noise:
 
 database:
   type: sqlite3
-  path: /etc/headscale/db.sqlite
+  sqlite:
+    path: /etc/headscale/db.sqlite
 
 prefixes:
   v4: 100.100.0.0/24       # VPN client subnet
