fix(headscale.yaml): align database path with setup script
- Updated database.sqlite path from /etc/headscale/db.sqlite to /var/lib/headscale/db.sqlite
- Keeps config consistent with setup_headscale.sh enforcement
- Prevents startup crash from mismatched DB location

--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -14,7 +14,7 @@ noise:
 database:
   type: sqlite3
   sqlite:
-    path: /etc/headscale/db.sqlite
+    path: /var/lib/headscale/db.sqlite
 
 prefixes:
   v4: 100.100.0.0/24       # VPN client subnet
