config format updated

--- a/checkmake.ini
+++ b/checkmake.ini
@@ -1,10 +1,2 @@
-# ============================================================
-# checkmake.ini
-# ------------------------------------------------------------
-# Local linting rules for homelab Makefile
-# Keeps recipes readable while enforcing discipline
-# ============================================================
-
-[rules]
-# Allow longer recipes for build/install tasks
-maxbodylength.length = 15
+[maxbodylength]
+maxBodyLength = 15
