subnet-router.service: log homelab commit and timestamp at boot
- Added ExecStartPre to echo current homelab commit hash and ISO-8601 timestamp
- Ensures every boot records repo state for audit and grepping
- Keeps main ExecStart unchanged (setup-subnet-router.sh)

--- a/systemd/subnet-router.service
+++ b/systemd/subnet-router.service
@@ -14,6 +14,10 @@ After=network.target dnsmasq.service
 
 [Service]
 Type=oneshot
+
+# Log homelab commit and timestamp before running the script
+ExecStartPre=/bin/bash -c 'echo "[subnet-router] homelab commit $$(git -C /home/julie/src/homelab rev-parse --short HEAD) at $$(date -Iseconds)"'
+
 ExecStart=/usr/local/bin/setup-subnet-router.sh
 RemainAfterExit=yes
 StandardOutput=journal
