--- a/10.89.12.4/etc/Archive/unbound/unbound.conf
+++ b/10.89.12.4/etc/Archive/unbound/unbound.conf
@@ -4,6 +4,8 @@
 # sudo systemctl enable unbound;sudo systemctl restart unbound;sudo systemctl status unbound;sudo journalctl -u unbound -f
 
 server:
+    local-data: "derp.vpn.bardi.ch. A 127.0.0.1"
+
     # Modules: validator + iterator only (no subnetcache)
     module-config: "validator iterator"
 
