--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -41,22 +41,23 @@ server:
 
 	do-ip6: yes
 
-	num-threads: 6
+	num-threads: 5
 	msg-cache-slabs: 8
 	rrset-cache-slabs: 8
 	infra-cache-slabs: 8
 	key-cache-slabs: 8
-	msg-cache-size: 128m
-	rrset-cache-size: 256m
-	key-cache-size: 64m
+	msg-cache-size: 256m
+	rrset-cache-size: 512m
+	key-cache-size: 128m
 	neg-cache-size: 4m
 	prefetch: yes
 	prefetch-key: yes
-	outgoing-range: 65535
-	num-queries-per-thread: 16384
+	outgoing-range: 4096
+	num-queries-per-thread: 8192
+	serve-expired: yes
 	so-reuseport: yes
-	so-rcvbuf: 4m
-	so-sndbuf: 4m
+	so-rcvbuf: 8m
+	so-sndbuf: 8m
 
 	hide-identity: yes
 	hide-version: yes
