systemd: add unbound control socket fixer (path+oneshot + start-limit)

--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -9,6 +9,7 @@
 server:
 	username: "unbound"
 	pidfile: ""
+	do-daemonize: no
 
 	local-data: "derp.vpn.bardi.ch. A 127.0.0.1" # split‑horizon override in the local resolver Unbound (for headscale DERP)
 
