--- a/config/systemd/unbound.service
+++ b/config/systemd/unbound.service
@@ -5,16 +5,19 @@ Documentation=man:unbound(8)
 After=network.target
 
 [Service]
-User=unbound
-Group=unbound
-AmbientCapabilities=CAP_NET_BIND_SERVICE
-CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+User=root
+Group=root
 Type=simple
+# Unbound runs in foreground; it will drop to "unbound" per unbound.conf
 ExecStart=/usr/sbin/unbound -d -c /etc/unbound/unbound.conf
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 RestartSec=5s
 LimitNOFILE=400000
+
+# Capabilities: allow binding to privileged ports; do not block setuid/setgid
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE CAP_SETUID CAP_SETGID
 
 # Optional: reference environment file if you want flexibility
 # EnvironmentFile=/etc/homelab.env
