--- a/config/systemd/unbound-ctl-fix.service
+++ b/config/systemd/unbound-ctl-fix.service
@@ -5,7 +5,7 @@ Wants=unbound.service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/sh -c 'for i in 1 2 3 4 5; do [ -e /run/unbound.ctl ] && /bin/chown root:unbound /run/unbound.ctl && /bin/chmod 660 /run/unbound.ctl && exit 0 || sleep 0.1; done; exit 0'
+ExecStart=/bin/sh -c 'for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50; do [ -e /run/unbound.ctl ] && /bin/chown root:unbound /run/unbound.ctl && /bin/chmod 660 /run/unbound.ctl && exit 0; sleep 0.1; done; exit 0'
 
 [Install]
 WantedBy=multi-user.target
