--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -97,8 +97,7 @@ forward-zone:
 
 remote-control:
 	control-enable: yes
-	control-interface: 127.0.0.1
-	control-port: 8953
+	control-interface: /run/unbound.ctl
 	server-key-file: /etc/unbound/unbound_server.key
 	server-cert-file: /etc/unbound/unbound_server.pem
 	control-key-file: /etc/unbound/unbound_control.key
