systemd: retry ExecStartPost to chown/chmod /run/unbound.ctl
wait up to 5s for socket then set owner and perms to root:unbound 0660 to cover race window

--- a/config/systemd/unbound.service.d/99-fix-unbound-ctl.conf
+++ b/config/systemd/unbound.service.d/99-fix-unbound-ctl.conf
@@ -1,3 +1,10 @@
 [Service]
-# Ensure the control socket is owned and mode set immediately after unbound starts.
-ExecStartPost=/bin/sh -c 'if [ -e /run/unbound.ctl ]; then /bin/chown root:unbound /run/unbound.ctl || true; /bin/chmod 660 /run/unbound.ctl || true; fi'
+# Wait up to 5 seconds for the socket to appear, then set owner and perms.
+ExecStartPost=/bin/sh -c 'for i in 0 1 2 3 4; do \
+  if [ -e /run/unbound.ctl ]; then \
+    /bin/chown root:unbound /run/unbound.ctl || true; \
+    /bin/chmod 0660 /run/unbound.ctl || true; \
+    exit 0; \
+  fi; \
+  sleep 1; \
+done; exit 0'
