systemd: remove stale socket before start and retry chown/chmod after start to ensure /run/unbound.ctl is root:unbound

--- a/config/systemd/unbound.service.d/99-fix-unbound-ctl.conf
+++ b/config/systemd/unbound.service.d/99-fix-unbound-ctl.conf
@@ -1,4 +1,7 @@
 [Service]
+# Remove any stale socket before starting so Unbound can create a fresh one
+ExecStartPre=/bin/sh -c '/bin/rm -f /run/unbound.ctl || true'
+
 # Wait up to 5 seconds for the socket to appear, then set owner and perms.
 ExecStartPost=/bin/sh -c 'for i in 0 1 2 3 4; do \
   if [ -e /run/unbound.ctl ]; then \
