--- a/config/systemd/unbound.service.d/99-fix-unbound-ctl.conf
+++ b/config/systemd/unbound.service.d/99-fix-unbound-ctl.conf
@@ -2,12 +2,18 @@
 # Remove any stale socket before starting so Unbound can create a fresh one
 ExecStartPre=/bin/sh -c '/bin/rm -f /run/unbound.ctl || true'
 
-# Wait up to 5 seconds for the socket to appear, then set owner and perms.
-ExecStartPost=/bin/sh -c 'for i in 0 1 2 3 4; do \
+# Wait up to 15 seconds for the socket to appear and be stable, then set owner and perms.
+ExecStartPost=/bin/sh -c 'for i in 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14; do \
   if [ -e /run/unbound.ctl ]; then \
-    /bin/chown root:unbound /run/unbound.ctl || true; \
-    /bin/chmod 0660 /run/unbound.ctl || true; \
-    exit 0; \
+    # if group already "unbound" we are done; otherwise try to set it
+    grp="$(/usr/bin/stat -c %G /run/unbound.ctl 2>/dev/null || echo unknown)"; \
+    if [ "$$grp" = "unbound" ]; then \
+      /bin/chmod 0660 /run/unbound.ctl || true; \
+      exit 0; \
+    else \
+      /bin/chown root:unbound /run/unbound.ctl || true; \
+      /bin/chmod 0660 /run/unbound.ctl || true; \
+    fi; \
   fi; \
   sleep 1; \
 done; exit 0'
