headscale fullx wired by version 0.27.1 does not support using my nas as exit node. Wait for v0.28.0

--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -105,11 +105,12 @@ bardi.ch:8384 {
 		host vpn.bardi.ch
 	}
 	reverse_proxy @vpn 127.0.0.1:8910 {
-		header_up Host {host}
+		header_up Host vpn.bardi.ch
 		transport http {
 			versions h1
-			keepalive 0s
+			keepalive 5s
 		}
+		flush_interval 1s
 	}
 
 	# DERP relay (external)
