--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -97,6 +97,9 @@ bardi.ch:8384 {
 		host dns.bardi.ch
 		remote_ip 10.89.12.0/24
 		remote_ip 2a01:8b81:4800:9c00::/64
+		remote_ip 10.0.0.1/24 10.1.0.1/24 10.2.0.1/24 10.3.0.1/24 10.4.0.1/24 10.5.0.1/24 10.6.0.1/24 10.7.0.1/24
+		remote_ip 2a01:8b81:4800:9c00:10::1/128 2a01:8b81:4800:9c00:11::1/128 2a01:8b81:4800:9c00:12::1/128 2a01:8b81:4800:9c00:13::1/128
+		remote_ip 2a01:8b81:4800:9c00:14::1/128 2a01:8b81:4800:9c00:15::1/128 2a01:8b81:4800:9c00:16::1/128 2a01:8b81:4800:9c00:17::1/128
 	}
 	reverse_proxy @dns_internal 127.0.0.1:8053
 
@@ -133,18 +136,39 @@ bardi.ch:8384 {
 	}
 	reverse_proxy @nas_internal 127.0.0.1:9999
 
+	# DNS over HTTPS (external with IP whitelisting)
+	@doh_external {
+		host dns.bardi.ch
+		path /dns-query*
+	}
+	handle @doh_external {
+		rate_limit {
+			zone dns {
+				window 1m
+				events 100
+				key {remote_ip}
+				reject_status 429
+				reject_message "DNS query rate limit exceeded"
+			}
+		}
+		 # ✅ point to your DoH frontend, not raw port 53
+		reverse_proxy http://127.0.0.1:8053
+	}
+
 	# Unknown host fallback
 	@unknown not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.bardi.ch qnap.bardi.ch nas.bardi.ch
 	respond @unknown "Not Found" 404
+
+
 
 	# log disabled to avoid disk spin
 }
 # After modification run
 # 1. Check the config first (dry run):
-#    sudo caddy validate --config /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile
-#    sudo caddy fmt --overwrite   /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile
+#    sudo caddy validate --config /home/julie/src/homelab/config/caddy/Caddyfile
+#    sudo caddy fmt --overwrite   /home/julie/src/homelab/config/caddy/Caddyfile
 # 2. Deploy the file
-#    sudo cp /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile /etc/caddy/Caddyfile
+#    sudo cp /home/julie/src/homelab/config/caddy/Caddyfile /etc/caddy/Caddyfile
 # 3. Reload gracefully:
 #    sudo caddy reload --config /etc/caddy/Caddyfile
 # 4. If running as a systemd service:
