feat(makefile): add dnscrypt-proxy orchestration
- Include mk/70_dnscrypt-proxy.mk in root Makefile
- Add help entry for `make dnscrypt-proxy` target
- Wire dnscrypt-proxy into gen0 foundational services (replacing CoreDNS)
- Ensure curated config and systemd unit deployed idempotently

--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -151,8 +151,8 @@ bardi.ch:8384 {
 				reject_message "DNS query rate limit exceeded"
 			}
 		}
-		 # ✅ point to your DoH frontend, not raw port 53
-		reverse_proxy http://127.0.0.1:8053
+		 # Forward to dnscrypt-proxy (plain HTTP listener on 127.0.0.1:8053)
+		reverse_proxy 127.0.0.1:8053
 	}
 
 	# Unknown host fallback
