--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -11,7 +11,7 @@ server:
 	pidfile: ""
 	do-daemonize: no
 
-	local-data: "derp.vpn.bardi.ch. A 127.0.0.1" # split‑horizon override in the local resolver Unbound (for headscale DERP)
+	local-data: "derp.vpn.bardi.ch. A 127.0.0.1" # split-horizon override in the local resolver Unbound (for headscale DERP)
 
 	module-config: "validator iterator"   # use "iterator" only if DNSSEC trust anchor fails
 
@@ -20,10 +20,12 @@ server:
 	auto-trust-anchor-file: "/var/lib/unbound/root.key"
 	root-hints: "/var/lib/unbound/root.hints"
 
+	# Listen on standard DNS port 53
 	interface: 127.0.0.1
 	interface: ::1
 	interface: 10.89.12.4
 	interface: 2a01:8b81:4800:9c00::4
+	port: 53
 
 	access-control: 127.0.0.1/32 allow
 	access-control: ::1/128 allow
