mk: add sysctl target to enforce Unbound buffer sizes
- create/update /etc/sysctl.d/99-unbound-buffers.conf if missing or incorrect
- reload sysctl settings and restart Unbound automatically
- print current net.core.rmem_max and net.core.wmem_max for validation
- suppress verbose sysctl --system output for cleaner logs

--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -68,13 +68,11 @@ server:
 
 	verbosity: 2
 
-# Domain-specific forwarding: authoritative Infomaniak servers for bardi.ch
-forward-zone:
-	name: "bardi.ch"
-	forward-addr: 84.16.67.66        # ns11.infomaniak.ch (IPv4)
-	forward-addr: 2001:1600:4:11::11 # ns11.infomaniak.ch (IPv6)
-	forward-addr: 84.16.66.66        # ns12.infomaniak.ch (IPv4)
-	forward-addr: 2001:1600:4:12::12 # ns12.infomaniak.ch (IPv6)
+# Authoritative-only resolution for bardi.ch via Infomaniak NS
+stub-zone:
+	name: "bardi.ch."
+	stub-host: ns11.infomaniak.ch
+	stub-host: ns12.infomaniak.ch
 
 # Default recursion fallback: global + local resolvers
 # comment for full-recursion
