deps: add dnsmasq→unbound integration with repo-managed config
- Install and manage dnsmasq lifecycle
- Deploy dnsmasq forwarding config to Unbound on port 5335
- Avoid port 53 conflicts while keeping DNS stack reproducible

--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -20,12 +20,12 @@ server:
 	auto-trust-anchor-file: "/var/lib/unbound/root.key"
 	root-hints: "/var/lib/unbound/root.hints"
 
-	# Listen on standard DNS port 53
+	# Listen on non-standard DNS port (dnsmasq owns 53)
 	interface: 127.0.0.1
 	interface: ::1
 	interface: 10.89.12.4
 	interface: 2a01:8b81:4800:9c00::4
-	port: 53
+	port: 5335
 
 	access-control: 127.0.0.1/32 allow
 	access-control: ::1/128 allow
