unbound: fix startup failure caused by nested server block

--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -14,18 +14,15 @@ server:
 	local-data: "derp.vpn.bardi.ch. A 127.0.0.1" # split-horizon override in the local resolver Unbound (for headscale DERP)
 
 	module-config: "validator iterator"   # use "iterator" only if DNSSEC trust anchor fails
-
 	do-not-query-localhost: no            # Allow queries to localhost
 
 	auto-trust-anchor-file: "/var/lib/unbound/root.key"
 	root-hints: "/var/lib/unbound/root.hints"
 
 	# Listen on non-standard DNS port (dnsmasq owns 53)
-	interface: 127.0.0.1
-	interface: ::1
-	interface: 10.89.12.4
-	interface: 2a01:8b81:4800:9c00::4
-	port: 5335
+    interface-automatic: yes
+    port: 5335
+    do-ip6: yes
 
 	access-control: 127.0.0.1/32 allow
 	access-control: ::1/128 allow
